| Summary: | ASTERISK-29630: Asterisk is unable to read extended number format terminfo files | ||
| Reporter: | Sean Bright (seanbright) | Labels: | |
| Date Opened: | 2021-09-04 12:05:38 | Date Closed: | 2021-09-08 19:10:55 |
| Priority: | Minor | Regression? | No |
| Status: | Closed/Complete | Components: | General |
| Versions: | 16.20.0 | Frequency of Occurrence | Frequent |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | ncurses 6.1 introduced an extended number format for terminfo files which the terminfo parsing in Asterisk is not able to parse. This results in some {{TERM}} values that do support color ({{screen-256color}} on Ubuntu 20.04 for example) to not get a color console.
We can probably use ncurses directly to query the capabilities of the terminal, but this gets things working in the short term. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2021-09-04 12:05:41.972-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Friendly Automation (friendly-automation) 2021-09-08 19:10:55.850-0500 Change 16441 merged by Friendly Automation: term.c: Add support for extended number format terminfo files. [https://gerrit.asterisk.org/c/asterisk/+/16441|https://gerrit.asterisk.org/c/asterisk/+/16441] By: Friendly Automation (friendly-automation) 2021-09-09 06:48:20.207-0500 Change 16440 merged by George Joseph: term.c: Add support for extended number format terminfo files. [https://gerrit.asterisk.org/c/asterisk/+/16440|https://gerrit.asterisk.org/c/asterisk/+/16440] By: Friendly Automation (friendly-automation) 2021-09-09 06:48:41.443-0500 Change 16439 merged by George Joseph: term.c: Add support for extended number format terminfo files. [https://gerrit.asterisk.org/c/asterisk/+/16439|https://gerrit.asterisk.org/c/asterisk/+/16439] By: Friendly Automation (friendly-automation) 2021-09-09 06:49:02.676-0500 Change 16410 merged by George Joseph: term.c: Add support for extended number format terminfo files. [https://gerrit.asterisk.org/c/asterisk/+/16410|https://gerrit.asterisk.org/c/asterisk/+/16410] | ||